feat: v1.1.0 — reactive UI/UX, GPU dispatch, rollback netcode, TTD recovery, zero-warning + reproducibility gates
A capability release across four zero-dependency fronts under one principle — fail-loud (a capability that
does not run tells its caller, via a new sealed Outcome<T>) — plus two build-quality gates and a security fix.

- Reactive UI/UX runtime (aetherium-ui): Signal/Computed/Effect with dynamic-dependency cleanup; ReactiveTree
  retained layout; widget-owned paint + input SPIs (the runtime is now instanceof-free); animation (easing/
  tween/damped spring over an injectable FrameClock); a design-token Theme (light/dark); ProgressBar/Divider/
  Toggle/Checkbox/Slider; accessibility roles + names + auditAccessibility lint; and a sovereign zero-dep
  headless PNG preview (software canvas + a PNG encoder on Deflater/CRC32) for golden-image tests.
- Sovereign GPU dispatch (aetherium-compute): GpuKernels.dispatchUnary returns Outcome — no device is a
  reported skip so the caller runs the CPU/SIMD tier, never a silent null.
- Deterministic sim + rollback netcode (aetherium-network sim/): LockstepSim + per-tick StateChecksum +
  firstDivergence desync report; RollbackSim proven bit-exact against a correct-input-all-along run.
- Time-Travel Debugger recovery (aetherium-hotswap): TtdEngine.restoreToLatestCommitted resumes cleanly after
  a faulted tick.
- Zero-warning gate: every module compiles with -Werror (two documented exceptions).
- Reproducibility: scripts/verify-reproducible.sh (found + fixed a non-reproducible spurious root jar).
- Security: overflow-safe FFM bounds in GuardedSegment.

All module tests pass under -Werror; artifacts are byte-reproducible.